--- a/Lab1/readme.ipynb
+++ b/Lab1/readme.ipynb
@@ -37,8 +37,7 @@
     " $$\n",
     "\n",
     "Escritas en los textos como $A:=(a_{i j})_{m \\times n}$, $B:=(b_{i j})_{n \\times p}$, donde $m,n,p$ indican las filas y columnas de cada matriz, el producto de $A\\cdot B$ es:\n",
-    "$$\n",
-    "C = AB_{}^{},  \\\\= \\begin{pmatrix}\n",
+    "$C = AB_{}^{},  \\\\= \\begin{pmatrix}\n",
     " a_{1 1} & \\cdots & a_{1 n} \\\\\n",
     " \\vdots & \\ddots & \\vdots \\\\\n",
     " a_{m 1} & \\cdots & a_{m n}\n",
