--- a/Lab1/readme.ipynb
+++ b/Lab1/readme.ipynb
@@ -37,7 +37,9 @@
     " $$\n",
     "\n",
     "Escritas en los textos como $A:=(a_{i j})_{m \\times n}$, $B:=(b_{i j})_{n \\times p}$, donde $m,n,p$ indican las filas y columnas de cada matriz, el producto de $A\\cdot B$ es:\n",
-    "$C = AB_{}^{},  \\\\= \\begin{pmatrix}\n",
+    "$C = AB_{}^{}$.\n",
+    "\n",
+    "$$ \\begin{pmatrix}\n",
     " a_{1 1} & \\cdots & a_{1 n} \\\\\n",
     " \\vdots & \\ddots & \\vdots \\\\\n",
     " a_{m 1} & \\cdots & a_{m n}\n",
@@ -45,15 +47,17 @@
     " b_{1 1} & \\cdots & b_{1 p} \\\\\n",
     " \\vdots & \\ddots & \\vdots \\\\\n",
     " b_{n 1} & \\cdots & b_{n p}\n",
-    " \\end{pmatrix} \\\\  \\begin{pmatrix}\n",
+    " \\end{pmatrix}$$\n",
+    " \n",
+    " $$\\begin{pmatrix}\n",
     " a_{11}b_{11}+ \\cdots +a_{1n}b_{n1} & \\cdots & a_{11}b_{1p}+ \\cdots +a_{1n}b_{np} \\\\\n",
     " \\vdots & \\ddots & \\vdots \\\\\n",
     " a_{m1}b_{11}+ \\cdots +a_{mn}b_{n1} & \\cdots & a_{m1}b_{1p}+ \\cdots +a_{mn}b_{np}\n",
     " \\end{pmatrix}\n",
     "$$\n",
+    "\n",
     "Que no es mas que la sumatoria de multiplicar la fila por la columna para cada elemento de la matriz resulta:\n",
-    "$$\n",
-    "c_{ij} = \\sum_{r=1}^n a_{ir}b_{rj}$$\n",
+    "$$c_{ij} = \\sum_{r=1}^n a_{ir}b_{rj}$$\n",
     "\n",
     "\n",
     "*Nota[!]:La cantindad de Columnas debe ser igual a la cantidad de filas de la segunda matriz,$A:=(a_{i j})_{m \\times n}$, $B:=(b_{i j})_{n \\times p}$, tendra como resultado una Matriz $B:=(b_{i j})_{m \\times p}$*.\n",
@@ -64,9 +68,50 @@
     "\n",
     "## Codigo implementado\n",
     "Para resolver este problema he hecho uso de los Makefiles para hacer parseo de los datos que  se me entrega, \n",
-    "la ejecucion de este programa obligatoriamente estable que los archivos de entrada tengan los nombre data1.txt, data2.txt, siendo *data1.txt* el archivo que contiene los datos reales de la Matriz $A$, y  lo mismo para $B$, \n",
+    "la ejecucion de este programa obligatoriamente establece que los archivos de entrada tengan los nombre ***data1.txt***, ***data2.txt***, siendo *data1.txt* el archivo que contiene los datos reales de la Matriz $A$, y  lo mismo para $B$, \n",
     "luego lo unico que sera hacaer es:\n",
     "**make run**\n",
+    "\n",
+    "### Lectura de Archivo\n",
+    "Para lograr la lectura de los archivo en lenguaje **C** utilizamos las funciones fopen,fwrite para la apertura del archivo, y el almacenamiento de este, el siguiente fragmento de codigo en C hace uso de fopen para abrir el archivo:\n",
+    "```c\n",
+    "#include <stdio.h>\n",
+    "int main(){\n",
+    "  FILE *archivo;\n",
+    "  archivo = fopen(\"data1.txt\",\"r\");\n",
+    "  fclose(fclose);\n",
+    "  return 0;\n",
+    "  }\n",
+    "```\n",
+    "Con el ejemplo anterior tenemos la posibilidad de acceder a los datos del archivo, ahora para la lectura hacemos uso de la funcion **fscanf()** que tiene los mismos parametros de **scanf()**, utilizando las mismas opciones para los diferentes tipos de dato. `int fscanf(FILE *stream, const char *format, ...)`. de los archivos recibidos por el programa, nos damos cuenta que las dos primeras lineas siempre serán enteros, por lo cual simplemente se leen cuatro enteros indicando filas, y columnas de cada matriz:\n",
+    "\n",
+    "```C\n",
+    "  //previous version has conflict with the pointer movmnt.\n",
+    "  fscanf(archi,\"%i\",&rows1);\n",
+    "  fscanf(archi,\"%i\",&cols1);\n",
+    "  fscanf(archi2,\"%i\",&rows2);\n",
+    "  fscanf(archi2,\"%i\",&cols2);\n",
+    "    float **MatA = (float **)calloc(rows1,sizeof(float*));\n",
+    "  for(i = 0; i < rows1; i++)\n",
+    "      MatA[i] = (float *)calloc(cols1 ,sizeof(float));\n",
+    "```\n",
+    "\n",
+    "Siguiendo el algoritmo iterativo anterior validamos que las columnas de la primera matriz sean iguales a las filas de la segunda matriz, de lo contrario saqueremos un mensaje de *Dimensiones incompatibles*. \n",
+    "\n",
+    "Uno de los temas mas delicados a la hora de realizar este ejercicio fue el de manejar la memoria de manera dinamica, el lenguaje C nos da mucho control para hacer uso de esta, mediante un mecanismo muy simple, solicitud de memoria(tipicamente la parte del *heap*) y liberacion de la misma. El ciclo es sencillo, cuando se precisa almacenar un nuevo dato, se solicita tanta memoria en **bytes** como sea necesaria, y una vez que ese dato ya no se necesita la memoria se devuelve para poder ser reutilizada, para solicitar memoria se utiliza la funcion malloc o calloc en mi caso dado que inicializa los datos de la memoria solicitada con valores de ceros.\n",
+    "\n",
+    "\n",
+    "```C\n",
+    "  float **MatA = (float **)calloc(rows1,sizeof(float*));\n",
+    "  for(i = 0; i < rows1; i++)\n",
+    "      MatA[i] = (float *)calloc(cols1 ,sizeof(float));\n",
+    "```\n",
+    "...to be continue go to sleep\n",
+    "\n",
+    "### Ejecución\n",
+    "Una vez se tiene garantizado los nombres de los archivos de entrada, utilizando la utilidad ***sed*** reemplazamos las comas en ambos archivos, luego nuestro programa en una de la secciones del Makefile tiene :\n",
+    "\n",
+    "./solve data1.txt data2.txt \n",
     "\n",
     "```c\n",
     "#include <stdio.h>\n",
@@ -85,6 +130,15 @@
     "[2]: https://es.wikibooks.org/wiki/Optimizaci%C3%B3n_del_Producto_de_Matrices\n",
     "[3]: https://en.wikipedia.org/wiki/Matrix_multiplication_algorithm#Iterative_algorithm"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
