--- a/Lab1/readme.ipynb
+++ b/Lab1/readme.ipynb
@@ -91,38 +91,84 @@
     "  fscanf(archi,\"%i\",&cols1);\n",
     "  fscanf(archi2,\"%i\",&rows2);\n",
     "  fscanf(archi2,\"%i\",&cols2);\n",
-    "    float **MatA = (float **)calloc(rows1,sizeof(float*));\n",
-    "  for(i = 0; i < rows1; i++)\n",
-    "      MatA[i] = (float *)calloc(cols1 ,sizeof(float));\n",
     "```\n",
     "\n",
     "Siguiendo el algoritmo iterativo anterior validamos que las columnas de la primera matriz sean iguales a las filas de la segunda matriz, de lo contrario saqueremos un mensaje de *Dimensiones incompatibles*. \n",
     "\n",
-    "Uno de los temas mas delicados a la hora de realizar este ejercicio fue el de manejar la memoria de manera dinamica, el lenguaje C nos da mucho control para hacer uso de esta, mediante un mecanismo muy simple, solicitud de memoria(tipicamente la parte del *heap*) y liberacion de la misma. El ciclo es sencillo, cuando se precisa almacenar un nuevo dato, se solicita tanta memoria en **bytes** como sea necesaria, y una vez que ese dato ya no se necesita la memoria se devuelve para poder ser reutilizada, para solicitar memoria se utiliza la funcion malloc o calloc en mi caso dado que inicializa los datos de la memoria solicitada con valores de ceros.\n",
+    "Uno de los temas mas delicados a la hora de realizar este ejercicio fue el de manejar la memoria de manera dinamica, el lenguaje C nos da mucho control para hacer uso de esta, mediante un mecanismo muy simple, solicitud de memoria(tipicamente la parte del *heap*) y liberacion de la misma. El ciclo es sencillo, cuando se precisa almacenar un nuevo dato, se solicita tanta memoria en **bytes** como sea necesaria, y una vez que ese dato ya no se necesita, a la memoria se devuelve para poder ser reutilizada, para solicitar memoria se utiliza la funcion **malloc** o **calloc** en mi caso dado que inicializa los datos de la memoria solicitada con valores de ceros.\n",
     "\n",
-    "\n",
+    "El siguiente snippet documenta como es posible realizar la reserva de memoria para la Matriz $A$\n",
     "```C\n",
     "  float **MatA = (float **)calloc(rows1,sizeof(float*));\n",
     "  for(i = 0; i < rows1; i++)\n",
     "      MatA[i] = (float *)calloc(cols1 ,sizeof(float));\n",
     "```\n",
-    "...to be continue go to sleep\n",
+    "al ser una reserva de memoria con **calloc** es necesario validar que efectivamente hallamos reservado el espacio en memoria:\n",
+    "```C\n",
+    "if (!MatA || !MatB || !MatC) { \n",
+    "      printf(\"\\n%s[!]%s Falla de Reserva de Memoria\",RED,RES);\n",
+    "      exit(ENOMEM);}\n",
+    "```\n",
     "\n",
-    "### Ejecución\n",
-    "Una vez se tiene garantizado los nombres de los archivos de entrada, utilizando la utilidad ***sed*** reemplazamos las comas en ambos archivos, luego nuestro programa en una de la secciones del Makefile tiene :\n",
+    "Ahora que ya hemos reservado la memoria para las tres matrices es necesario leer los datos :\n",
+    "```C\n",
+    "while(!feof(archi)){\n",
+    "    for(i=0;i<rows1;i++){\n",
+    "      for(j=0;j<cols1;j++){\n",
+    "        fscanf(archi,\"%f\",&MatA[i][j]);\n",
+    "        }\n",
+    "      }\n",
+    "    }\n",
+    "```\n",
     "\n",
-    "./solve data1.txt data2.txt \n",
+    "Ahora realizamos la multiplicación de matrices como se muestra en la imagen anterior:\n",
     "\n",
-    "```c\n",
-    "#include <stdio.h>\n",
-    "#include <stdlib.h>\n",
-    "//High Performance Computing\n",
-    "//Lab#1: Matrix Multiplication \n",
-    "//hfjimenez@utp.edu.co, 2017-2\n",
-    "...to be continued\n",
-    "\n",
+    "```C\n",
+    "void multimat(float** M,float** M2,float**R,int r1,int r2,int c2){\n",
+    "  int tmp=0; \n",
+    "  for(int i=0;i<r1;i++){\n",
+    "    for(int j=0;j<c2;j++){\n",
+    "      tmp=0;\n",
+    "      for(int k=0;k<r2;k++){\n",
+    "        tmp=tmp+M[i][k]*M2[k][j];\n",
+    "      }\n",
+    "     R[i][j]=tmp;\n",
+    "    } \n",
+    "  }\n",
+    "}\n",
     "\n",
     "```\n",
+    "\n",
+    "\n",
+    "### Ejecución\n",
+    "\n",
+    "Para ejecutar este programa he tenido que hacer pruebas pequeñas como las que se encuentran en la carpeta **clang**, una de ellas fue la lectura de datos desde el archivo con **fscanf()**, por las pruebas realizadas observer que es mucho mas facil realizar la lectura de los datos cuando se tiene el siguiente formato:\n",
+    "\n",
+    "```\n",
+    "2\n",
+    "2\n",
+    "1 2\n",
+    "3 4\n",
+    "```\n",
+    "**Notese** el espacio entre los valores de la matriz, si este espacio no esta tocaria implementar una estrategia para detectar la ***,*** y seria de mas tiempo, aun asi este programa funciona con el formato de entrada original dado que he creado un pequeño bash script que utiliza la utilidad ***sed*** para reemplazar las comas en ambos archivos, ejecutar el programa con los datos parseados y recrear los datos. \n",
+    "```sh\n",
+    "#!/usr/bin/env bash\n",
+    "#hfjimenez@utp.edu.co\n",
+    "#Preprocess the Txt Files, more easy manipulation in the C program\n",
+    "echo -e \"[*]\\x1B[0m Limpiando Archivos\\n\"\n",
+    "sed -e \"s/,/ /g\" data1.txt>clean1.txt\n",
+    "sed -e \"s/,/ /g\" data2.txt>clean2.txt\n",
+    "touch r.txt\n",
+    "echo -e \"\\x1B[33m[*]\\x1B[0m Corriendo Programa\"\n",
+    "gcc solve.c -w -s -o solver \n",
+    "./solver clean1.txt clean2.txt\n",
+    "echo -e \"\\x1B[33m[*]\\x1B[0m Escribiendo Resultado a Stdout(result.txt)\"\n",
+    "sed -e \"s/ /,/g\" r.txt>result.txt\n",
+    "rm r.txt clean1.txt clean2.txt\n",
+    "echo -e \"\\x1B[32m[✔]TERMINADO\\x1B[0m\"\n",
+    "```\n",
+    "Ahora solo basta con realizar `./run.sh` y nuestro programa esta listo con complejidad cubica.\n",
+    "\n",
     "#### Referencias :\n",
     "- https://en.wikipedia.org/wiki/Matrix_multiplication_algorithm#Iterative_algorithm\n",
     "- https://es.wikibooks.org/wiki/Optimizaci%C3%B3n_del_Producto_de_Matrices\n",
